--- a/About.html
+++ b/About.html
@@ -217,7 +217,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
                   </div>
                   <div>
                      <ul>
-                        <p style="text-align:center;">State of the art computer vison models allow automated annotation of field images and video</p>
+                        <p style="text-align:center;">State of the art computer vision models allow automated annotation of field images and video</p>
                      </ul>
                   </div>
                </div>
