--- a/Research/Index.html
+++ b/Research/Index.html
@@ -164,6 +164,8 @@
                   </li>
                </ul>
                <ul style="list-style-type: none">
+<li style="list-style-type:'†  '"><b>Grele A</b>, Richards L. 2024. <i>Nectar chemistry alters plant fitness by manipulating pollinators</i>. Entomological Society of America.</li>
+<p></p>
 <li style="list-style-type:'†  '"><b>Grele A</b>, Richards L. 2024. <i>Chemical signals and chemical noise - why plant defenses are more complex and pheromones are simpler in the tropics</i>. 27th International Congress of Entomology.</li>
 <p></p>
 <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. 2024. <i>Intra- and interspecific variation in milkweed nectar chemistry</i>. HCCE annual symposium.</li>
@@ -172,9 +174,9 @@
 <p></p>
                   <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. 2023. <i>Simulated herbivory increases plant fitness by altering floral traits and pollinator behavior</i>. Gordon Research Conference.</li>
                   <p></p>
-                  <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. 2022. <i>Using machine learning to study pollination with high temporal and taxonomic resolution</i>. Entomology.</li>
+                  <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. 2022. <i>Using machine learning to study pollination with high temporal and taxonomic resolution</i>. Entomological Society of America.</li>
                   <p></p>
-                  <li style="list-style-type:'*  '"><b>Grele A</b>, Aflitto NC, Thaler JS. 2018. <i>Species-specific responses of the Colorado potato beetle to pheromone cues of predatory and phytophagous pentatomids</i>. Entomology.</li>
+                  <li style="list-style-type:'*  '"><b>Grele A</b>, Aflitto NC, Thaler JS. 2018. <i>Species-specific responses of the Colorado potato beetle to pheromone cues of predatory and phytophagous pentatomids</i>. Entomological Society of America.</li>
                </ul>
                </article>
          </div>
