--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -83,7 +83,7 @@
 
 <h1 id="c1">XPRIZE Rainforest</h1>
                   <ul style="list-style-type:none;padding-left:0px;">
-                     <li>Since 2022 I have been developing computer vision tools for Limelight: Rainforest, one of six finalists in the XPRIZE rainforest competition. XPRIZE Rainforest is a 10 million dollar competition to develop automated technology capable of rapidly surveying biodiversity in tropical forests.</li>
+                     <li>Since 2022 I have been developing computer vision tools for Limelight: Rainforest, the first place winners of the XPRIZE rainforest competition. XPRIZE Rainforest was a 10 million dollar competition to develop automated technology capable of rapidly surveying biodiversity in tropical forests, concluded in November of 2024.</li>
                      <p></p>
                   </ul>
                </div>
