postdoc, papers, and xprize work

--- a/About.html
+++ b/About.html
@@ -120,7 +120,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
                <div>
                   <section class="about" itemprop="text">
                      <h2>Hello!</h2>
-                     <p>I'm currently a 6th year PhD candidate studying chemical ecology in the EECB program at the University of Nevada Reno. I received my BS in entomology from Cornell university in 2019, where I worked in labs broadly studying non-consumptive effects of predators, induced plant defenses, and how chemical signaling mediates pollinator and social insect behavior.</p>
+                     <p>I'm currently a postdoctoral research fellow studying floral chemical ecology in the Crall and Trowbridge labs at the University of Wisconsin - Madison. I completed my PhD at the University of Nevada, Reno in 2025, where I studied large scale patterns in the complexity of insect semiochemistry, the role of nectar chemistry in driving plant – insect interactions, and developed computer vision tools for surveying insect biodiversity. I received my BS in entomology from Cornell university in 2019, where I worked in labs broadly studying non-consumptive effects of predators, induced plant defenses, and how chemical signaling mediates pollinator and social insect behavior.</p>
                   </section>
                </div>
             </article>
@@ -152,13 +152,13 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
                <div>
                   <section class="about" itemprop="text">
                
-<p>My research broadly focuses on how specialized chemistry mediates interactions between insects and plants, from the level of the individual, to communities, to global patterns of chemical and biological diversity. I aim to combine field and laboratory approaches with state of the art analytical and statistical tools to elucidate subtle processes.
+<p>My research broadly focuses on how specialized chemistry mediates interactions between insects and plants, from the level of the individual, to communities, to global patterns of chemical and biological diversity. I aim to combine field and laboratory approaches with state of the art analytical and statistical tools to elucidate the subtle processes governing these systems. My work at UW - Madison investigates floral volatile chemodiversity, the diversity of interactions between flowers and their pollinators, and how this diversity can help buffer pollinator communities against stress.
 </p>
                      <p>My current research interests include</p>
                      <ul style="text-align: left;">
                         <li>Latitudinal gradients in species interactions and functional diversity</li>
                         <li>The role of plant physical and chemical traits in mediating herbivore and pollinator interactions</li>
-                        <li>Intra and interspecific variation in nectar chemistry and the adaptive role of nectar toxins</li>
+                        <li>Intra and interspecific variation in floral chemistry and the adaptive role of nectar toxins</li>
                         <li>Global patterns of semiochemical richness</li>
                         <li>The application of machine learning and computer vision for rapid surveys of biodiversity.</li>
                      </ul>
@@ -193,7 +193,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
             <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
                <div>
                   <section class="about" itemprop="text">
-                     <p>In 2022 I became involved in the XPRIZE Rainforest competition to develop methods of rapidly surveying tropical biodiversity. I am the computer vision and data pipeline lead for Limelight: Rainforest. Our goal is to use multi-modal data collection and state-of-the-art analytic tools to identify taxa, with a special focus on insect communities, to provide critical insights for rainforest conservation.</p>
+                     <p>From 2022 through 2024 I was the computer vision and data pipeline lead for team Limelight Rainforest in the 10 million dollar XPRIZE Rainforest competition. Our goal was to use multi-modal data collection and state-of-the-art analytic tools to remotly identify species, with a special focus on insect communities, to provide critical insights for rainforest conservation. Our team took first place in the XPRIZE competition in Brazil in 2024, but our work in biodiversity monitoring is ongoing.</p>
                      <h2><a href = "/Projects/Index">Read more</a></h2>
                   </section>
                </div>
