--- a/Research/Index.html
+++ b/Research/Index.html
@@ -149,6 +149,8 @@
                   </li>
                </ul>
                <ul style="list-style-type: none">
+		  <li>L. Martinez, N. C. Aflitto, F. T. MacNeill, <b>A. Grele</b>, J. S. Thaler. 2025. <i>A predator pheromone increases potato yield through multiple mechanisms involving plant and prey responses</i> Journal of Economic Entomology 118 (3), 1297-1306</li>
+<p></p>
                   <li><b>A. Grele</b>, T. J. Massad, K. A. Uckele, L. Dyer, Y. Antonini, L. Braga, M. L. Forister, L. Sulca-Garro, M. Kato, and H. G. Lopez. 2023. <i>Intra and interspecific diversity in a tropical plant clade alter herbivory and ecosystem resilience</i>. Elife 12, RP86988.</li>
                   <p></p>
                   <li>Massad, T., A. R. Nascimento, D. Campos, W. Simbaña, H. G. Lopez, L. S. Garro, C. Lepesqueur, L. Richards, M. Forister, J. Stireman, E. Tepe, K. Uckele, L. Braga, T. Walla, A. Smilanich, <b>A. Grele</b>, and L. Dyer. 2023. <i>Variation in the strength of local and regional determinants of herbivory across the Neotropics</i>. Oikos, e10218</li>
@@ -164,19 +166,21 @@
                   </li>
                </ul>
                <ul style="list-style-type: none">
-<li style="list-style-type:'†  '"><b>Grele A</b>, Richards L. 2024. <i>Nectar chemistry alters plant fitness by manipulating pollinators</i>. Entomological Society of America.</li>
+<li style="list-style-type:'†  '"><b>A. Grele</b>, L. Richards. 2025. <i>Not all pollinators are equal: Specialized nectar chemistry alters plant fitness by selectively modifying insect behavior.</i>. HCCE annual symposium.</li>
 <p></p>
-<li style="list-style-type:'†  '"><b>Grele A</b>, Richards L. 2024. <i>Chemical signals and chemical noise - why plant defenses are more complex and pheromones are simpler in the tropics</i>. 27th International Congress of Entomology.</li>
+<li style="list-style-type:'†  '"><b>A. Grele</b>, L. Richards. 2024. <i>Nectar chemistry alters plant fitness by manipulating pollinators</i>. Entomological Society of America.</li>
 <p></p>
-<li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. 2024. <i>Intra- and interspecific variation in milkweed nectar chemistry</i>. HCCE annual symposium.</li>
+<li style="list-style-type:'†  '"><b>A. Grele</b>, L. Richards. 2024. <i>Chemical signals and chemical noise - why plant defenses are more complex and pheromones are simpler in the tropics</i>. 27th International Congress of Entomology.</li>
 <p></p>
-<li style="list-style-type:'†  '"><b>Grele A</b>, Mallon C. 2024. <i>Raman Spectroscopy at a Distance: A Tool for Ecological Research in the Field</i>. HCCE annual symposium.</li>
+<li style="list-style-type:'*  '"><b>A. Grele</b>, L. Richards. 2024. <i>Intra- and interspecific variation in milkweed nectar chemistry</i>. HCCE annual symposium.</li>
 <p></p>
-                  <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. 2023. <i>Simulated herbivory increases plant fitness by altering floral traits and pollinator behavior</i>. Gordon Research Conference.</li>
+<li style="list-style-type:'†  '"><b>A. Grele</b>, C. Mallon. 2024. <i>Raman Spectroscopy at a Distance: A Tool for Ecological Research in the Field</i>. HCCE annual symposium.</li>
+<p></p>
+                  <li style="list-style-type:'*  '"><b>A. Grele</b>, L. Richards. 2023. <i>Simulated herbivory increases plant fitness by altering floral traits and pollinator behavior</i>. Gordon Research Conference.</li>
                   <p></p>
-                  <li style="list-style-type:'*  '"><b>Grele A</b>, Richards L. 2022. <i>Using machine learning to study pollination with high temporal and taxonomic resolution</i>. Entomological Society of America.</li>
+                  <li style="list-style-type:'*  '"><b>A. Grele</b>, L. Richards. 2022. <i>Using machine learning to study pollination with high temporal and taxonomic resolution</i>. Entomological Society of America.</li>
                   <p></p>
-                  <li style="list-style-type:'*  '"><b>Grele A</b>, Aflitto NC, Thaler JS. 2018. <i>Species-specific responses of the Colorado potato beetle to pheromone cues of predatory and phytophagous pentatomids</i>. Entomological Society of America.</li>
+                  <li style="list-style-type:'*  '"><b>A. Grele</b>, N. C. Aflitto, J. S. Thaler. 2018. <i>Species-specific responses of the Colorado potato beetle to pheromone cues of predatory and phytophagous pentatomids</i>. Entomological Society of America.</li>
                </ul>
                </article>
          </div>
