base for camera instructions

--- a/About.html
+++ b/About.html
@@ -82,7 +82,7 @@ I built this entire website from scratch to learn how to use HTML and CSS. That'
       </div>
       <div class="surmain">
          <div class="main">
-            <div class="main sidebar">
+            <div class="main sidebar" style = "border-right:None">
                <div itemscope itemtype="https://schema.org/Person">
                   <div>
                      <a class="avatar">
