--- a/Software/RIA.html
+++ b/Software/RIA.html
@@ -140,7 +140,7 @@
           </ul>
         </div>
         <div class="footer copyright">
-          <p>&copy; <span>2023</span> Ari Grele.</p>
+          <p>&copy; <span>2023-2025</span> Ari Grele.</p>
         </div>
       </footer>
     </div>
