--- a/Software/empty.html
+++ b/Software/empty.html
@@ -2,7 +2,7 @@
 <html lang="en" class="no-js">
    <head>
       <meta charset="utf-8">
-      <title>Software</title>
+      <title>Annotator</title>
       <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐝</text></svg>">
       <meta name     = "author"         content = "Ari Grele">
       <meta name     = "description"    content = "The personal site of Ari Grele, PhD candidate at the university of Nevada Reno">
@@ -63,52 +63,22 @@
       </div>
     <div class="surmain">
       <div class="main">
-        <div class="main sidebar" style="margin-left:0px;margin-right:10px;">
+        <div class="main sidebar">
           <div>
-	    <div>
-	      <h1>Software<h1>
-	    </div>
-            <div>
-              <ul>
-                <li><a href="#p1">Rapid Image Annotator</a></li>
-              <ul>
-            </div>
-            <div>
-            </div>
+            <h1>Title</h1>
+            <h2>Subtitle</h2>
+          </div>
+          <div>
+            <ul>
+              <li>Links</li>
+	    <ul>
           </div>
         </div>
         <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
-<h2 id="p1" style="text-align:center;margin:auto;margin-top:20px;margin-bottom:15px;">Rapid Image Annotator</h2>
-          <div class="downloads">
+          <div>
             <section itemprop="text">
-
-              <p>A tool for rapidly associating spatial and textual information with large numbers of images.</p>
-<p>Current capabilities:</p>
-		<ul>
-		<li>Toolsets geared for extremely rapid image annotation. Users report speeds of up to ~1,000 images annotated per hour for simple tasks and ~200 image per hour for complex tasks</li>
-		<li>Spatial annotation of bounding boxes, bounding circles, lines, and points</li>
-		<li>Text annotation of entire image or individual spatial markers</li>
-		<li>Complete customizability of keyboard inputs</li>
-		<li>Currently only available for Windows 10-11</li>
-		</ul>
-		<p>Things I developed this software for:</p>
-		<ul>
-		<li>Annotation of 510,000 insect bounding boxes for computer vision training</li>
-		<li>Labeling of 8,600 milkweed flowers with age classifications</li>
-		<li>Measuring of 17,500 scale bars for standardizing herbivory analyses</li>
-		</ul>
+		  Text
             </section>
-	<section style="width:200px;flex-shrink:0;margin:auto;margin-top:0px;padding-left:10px;">
-	<h1 style="margin-top:0px;">Downloads</h1>
-	<ul style="border-bottom:1px solid #cbcbcb;list-style-type: none;padding-left:0px;">
-	<li>Windows 10-11</li>
-		<ul style="font-size:16px;list-style-type:none;">	
-		<li><a href="RIA">All versions</a></li><br>
-		<li><a href="https://arigrele.github.io/Files/RIA-2.5.42.zip" target="_blank">Version 2.5.42</a></li>
-		<li><a href="https://arigrele.github.io/Files/RIA-2.5.37.zip" target="_blank">Version 2.5.37</a></li>
-		<li><a href="https://arigrele.github.io/Files/RIA-2.2.33.zip" target="_blank">Version 2.2.33</a></li>
-	</ul><br></ul>
-	</section>
           </div>
         </article>
       </div>
