--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -77,7 +77,7 @@
             </div>
           </div>
         </div>
-        <article class="main content" itemscope itemtype="https://schema.org/CreativeWork">
+        <article class="main content" itemscope itemtype="https://schema.org/CreativeWork", style = "margin-left:10px;">
           <div>
             <div class="holder">
 
